[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Default Sprite Top-Down Shooter/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/impact.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sound/Sound Effects/ReloadLaser.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/Sound Effects/Empty_Laser.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Default Sprite Top-Down Shooter/Player/PlayerShooting.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121.023, 104.405 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "circle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.465517, 0.465517 )
frames = SubResource( 2 )
animation = "shooting"

[node name="AimingPosition" type="Position2D" parent="."]
position = Vector2( 134.999, 0.25 )

[node name="PlayerCamera2D" type="Camera2D" parent="."]
current = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUD"]
margin_left = 28.0
margin_top = 11.0
margin_right = 966.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo_Counter" type="Label" parent="HUD"]
margin_left = 233.549
margin_top = 22.9724
margin_right = 359.549
margin_bottom = 145.972
custom_fonts/font = SubResource( 4 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_Killed" type="Label" parent="HUD"]
margin_left = 510.684
margin_top = 19.874
margin_right = 636.684
margin_bottom = 142.874
custom_fonts/font = SubResource( 5 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD"]
margin_left = 815.924
margin_top = 22.2236
margin_right = 941.924
margin_bottom = 145.224
custom_fonts/font = SubResource( 6 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet" type="Label" parent="HUD"]
margin_left = 40.8978
margin_top = 17.8775
margin_right = 212.898
margin_bottom = 148.878
custom_fonts/font = SubResource( 7 )
text = "Bullet
Counter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyKilled" type="Label" parent="HUD"]
margin_left = 386.127
margin_top = 58.368
margin_right = 497.127
margin_bottom = 108.368
custom_fonts/font = SubResource( 8 )
text = "Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Health" type="Label" parent="HUD"]
margin_left = 666.046
margin_top = 52.994
margin_right = 810.046
margin_bottom = 114.994
custom_fonts/font = SubResource( 9 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty_No_Bullets" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Reload_Sound_Effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_PlayerSprite_animation_finished"]
